--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -1,4 +1,37 @@
+// @import '~antd/es/style/themes/default.less';
 .personalIntroductionWrap {
-  background-color: #9dc7e0;
+  padding-bottom: 100px;
+  font-weight: 600;
+  font-size: 20px;
+  font-family: fangsong;
+  line-height: 50px;
+  // width: 100%;
+  // height: 100%;
+  background-image: url('./static/personalBg.png');
   background-repeat: repeat;
+
+  .personalProfile {
+    padding: 12% 22%;
+  }
+
+  .personalProfile::selection {
+    color: #ffffff;
+    background: #1e293b;
+  }
+
+  .aboutThisSite {
+    margin: 11% 15%;
+    margin-bottom: 50px;
+    padding: 25px;
+    text-shadow: 0 0 black;
+    background: #fff;
+    border: 3px solid #000;
+    border-radius: 15px;
+    box-shadow: 0 2px 15px black;
+  }
+
+  .aboutThisSite::selection {
+    color: #ffffff;
+    background: #1e293b;
+  }
 }
