--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -1,5 +1,6 @@
 // @import '~antd/es/style/themes/default.less';
 .personalIntroductionWrap {
+  position: relative;
   padding-bottom: 100px;
   font-weight: 600;
   font-size: 20px;
@@ -31,5 +32,22 @@
   .aboutThisSite::selection {
     color: #ffffff;
     background: #1e293b;
+  }
+
+  .poweredByVercel {
+    position: absolute;
+    bottom: 0px;
+    left: 48%;
+    color: #a8a8a8;
+    font-size: 12px;
+  }
+
+  .upperRightCorner {
+    position: absolute;
+    right: 50px;
+    display: flex;
+    justify-content: space-between;
+    width: 125px;
+    font-size: 16px;
   }
 }
