添加富文本编辑器

--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -1,27 +1,19 @@
 // @import '~antd/es/style/themes/default.less';
 .personalIntroductionWrap {
   position: relative;
+  padding-top: 1px;
   padding-bottom: 100px;
-  font-weight: 600;
-  font-size: 20px;
-  font-family: fangsong;
+  font-size: 16px;
+  font-family: '-apple-system,BlinkMacSystemFont,Helvetica Neue,SourceHanSans';
   line-height: 50px;
   background-image: url('./static/personalBg.png');
   background-repeat: repeat;
 
-  .personalProfile {
-    padding: 12% 22%;
-  }
-
-  .personalProfile::selection {
-    color: #ffffff;
-    background: #1e293b;
-  }
-
   .aboutThisSite {
-    margin: 11% 15%;
+    margin: 10% 15%;
     margin-bottom: 50px;
     padding: 25px;
+    padding: 5% 10%;
     text-shadow: 0 0 black;
     background: #fff;
     border: 3px solid #000;
@@ -47,7 +39,7 @@
     right: 50px;
     display: flex;
     justify-content: space-between;
-    width: 125px;
+    width: 150px;
     font-size: 16px;
   }
 }
