图片适配手机

--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -12,7 +12,6 @@
   .aboutThisSite {
     margin: 10% 15%;
     margin-bottom: 50px;
-    padding: 25px;
     padding: 5% 10%;
     text-shadow: 0 0 black;
     background: #fff;
@@ -41,5 +40,11 @@
     justify-content: space-between;
     width: 150px;
     font-size: 16px;
+  }
+
+  @media screen and (max-width: 500px) {
+    .mainContent {
+      margin-top: 320px;
+    }
   }
 }
