--- a/src/pages/mypages/myModularization/index.less
+++ b/src/pages/mypages/myModularization/index.less
@@ -1,6 +1,6 @@
 .modularization {
   min-height: 300px;
   margin-bottom: 14px;
-  padding: 20px;
+  padding: 68px 20px 20px;
   background-color: #fff;
 }
