--- a/src/pages/mypages/myArticle/index.less
+++ b/src/pages/mypages/myArticle/index.less
@@ -75,7 +75,7 @@
   }
 
   .rightContent {
-    max-width: 800px;
+    width: 900px;
     padding: 0 40px 40px;
     background-color: #fff;
     border-left: 1px solid #f4f5f5;
@@ -85,6 +85,17 @@
       font-weight: 700;
       font-size: 36px;
       line-height: 1.389;
+    }
+
+    .commentsTotal {
+      height: 40px;
+      margin-top: 20px;
+      font-weight: 700;
+      border-bottom: 1px solid #d8dad9;
+    }
+    .avatarAndComment {
+      display: flex;
+      padding: 20px 0;
     }
   }
 }
