--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -10,6 +10,7 @@
   background-repeat: repeat;
 
   .aboutThisSite {
+    min-height: 500px;
     margin: 10% 15%;
     margin-bottom: 50px;
     padding: 5% 10%;
