--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -38,24 +38,24 @@
 
 
     .myPicture :hover {
-      animation: move 3s;
+      animation: pictureMove 3s;
     }
 
-    @keyframes move {
+    @keyframes pictureMove {
       0% {
         // transform: scale(1);
-        transform: rotateY(0);
+        transform: scale(1) rotateY(0);
 
       }
 
       50% {
         // transform: scale(1.5);
-        transform: rotateY(180deg);
+        transform: scale(1.5) rotateY(180deg);
       }
 
       100% {
         // transform: scale(1);
-        transform: rotateY(360deg);
+        transform: scale(1) rotateY(360deg);
       }
     }
   }
