--- a/src/pages/personal/components/LuminousFont/index.less
+++ b/src/pages/personal/components/LuminousFont/index.less
@@ -1,4 +1,14 @@
 .luminousFont {
+
+    .close {
+        position: fixed;
+        top: 14px;
+        color: #1890ff;
+        z-index: 100;
+        right: 360px;
+        cursor: pointer;
+    }
+
     .content {
         margin: auto;
         color: #000;
