--- a/src/pages/personal/components/LuminousFont/index.less
+++ b/src/pages/personal/components/LuminousFont/index.less
@@ -17,7 +17,7 @@
         position: fixed;
         width: 312px;
         bottom: 100px;
-        left: 43%;
+        // left: 43%;
     }
 
     .content::before {
