--- a/src/pages/personal/index.less
+++ b/src/pages/personal/index.less
@@ -23,10 +23,10 @@
 
     .myPicture {
       position: absolute;
-      right: 25%;
+      // right: 25%;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      // align-items: center;
       color: #c1c1c1;
 
       img {
@@ -38,7 +38,7 @@
 
 
     .myPicture :hover {
-      animation: pictureMove 3s;
+      // animation: pictureMove 3s;
     }
 
     @keyframes pictureMove {
