--- a/src/pages/mypages/myArticle/index.less
+++ b/src/pages/mypages/myArticle/index.less
@@ -60,6 +60,7 @@
         font-weight: 700;
         font-size: 16px;
       }
+
       .moreIcon:hover {
         background-color: #e7e9e8;
         border-radius: 4px;
@@ -93,6 +94,7 @@
       font-weight: 700;
       border-bottom: 1px solid #d8dad9;
     }
+
     .avatarAndComment {
       display: flex;
       padding: 20px 0;
@@ -105,5 +107,10 @@
         cursor: pointer;
       }
     }
+  }
+
+  .ipAddress {
+    margin: 0 0 20px 50px;
+    color: #d9d9d9;
   }
 }
