添加工信部备案号

--- a/src/pages/mypages/myArticle/index.less
+++ b/src/pages/mypages/myArticle/index.less
@@ -1,6 +1,5 @@
 .myArticleWarp {
   display: flex;
-  height: 100%;
   padding: 20px;
   background-color: #fff;
 
@@ -112,5 +111,21 @@
   .ipAddress {
     margin: 0 0 20px 50px;
     color: #d9d9d9;
+  }
+}
+
+.icpNum {
+  width: 100%;
+  height: 50px;
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+
+  a {
+    color: #8590a6;
+    font-size: 12px;
   }
 }
