主页添加入口

--- a/src/pages/mypages/myModularization/index.less
+++ b/src/pages/mypages/myModularization/index.less
@@ -1,6 +1,7 @@
 .modularization {
   min-height: 300px;
-  margin-bottom: 14px;
+  // margin-bottom: 14px;
+  border-bottom: 14px solid #f0f2f5;
   padding: 68px 20px 20px;
   background-color: #fff;
 }
