--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -14,6 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>前端笔记分享</title>
   <link rel="icon" href="<%= context.config.publicPath +'letter_l.png'%>" type="image/x-icon" />
+  <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=e888fd47d43cae77ccac97c4aa467e4f"></script>
 </head>
 
 <body>
