--- a/src/pages/PortalPage/index.less
+++ b/src/pages/PortalPage/index.less
@@ -17,9 +17,13 @@
                 width: 30%;
                 text-align: center;
 
-                img {
+                .arp-img {
                     height: 60px;
-                    // padding: 10px;
+                }
+
+                .gj-img {
+                    height: 40px;
+                    margin-top: 10px;
                 }
             }
 
