添加全局搜索

--- a/src/components/RewriteFooter/index.less
+++ b/src/components/RewriteFooter/index.less
@@ -7,9 +7,11 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
+    color: #8590a6;
+    font-size: 12px;
 
-    a {
-        color: #8590a6;
-        font-size: 12px;
-    }
+    // a {
+    //     color: #8590a6;
+    //     font-size: 12px;
+    // }
 }
