--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -12,7 +12,7 @@
   <meta name="description" content="
       Out-of-the-box mid-stage front-end/design solution." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>前端笔记分享</title>
+  <title>不语</title>
   <link rel="icon" href="<%= context.config.publicPath +'letter_l.png'%>" type="image/x-icon" />
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=e888fd47d43cae77ccac97c4aa467e4f"></script>
 </head>
