--- a/src/pages/PortalPage/component/AboutCompany/index.less
+++ b/src/pages/PortalPage/component/AboutCompany/index.less
@@ -38,16 +38,16 @@
                 cursor: pointer;
 
                 &:hover {
-                    color: #ff572d;
+                    color: #01a8ec;
                 }
 
             }
 
 
             .select-title {
-                border-bottom: 5px solid #ff572d;
+                border-bottom: 5px solid #01a8ec;
                 padding-bottom: 10px;
-                color: #ff572d;
+                color: #01a8ec;
                 z-index: 1;
             }
         }
@@ -73,10 +73,11 @@
 
     .about-company-title {
         font-size: 18px;
-        color: #ff572d;
+        color: #01a8ec;
         text-align: center;
         font-weight: 600;
         padding: 10px 0;
+        padding-top: 40px;
     }
 
     .video-img {
@@ -130,12 +131,14 @@
             // gap: 30px;
             justify-content: center;
             align-items: center;
-            width: 296px;
-            height: 146px;
+            width: 22%;
+            height: 250px;
             border: 1px solid rgba(255, 255, 255, 1);
             border-radius: 5px;
             box-shadow: 0px 3px 20px rgba(110, 0, 255, 0.14901960784313725);
-            position: relative;
+            // position: relative;
+            padding: 30px;
+            gap: 30px;
 
             .core-values {
                 padding-top: 15px;
@@ -170,7 +173,7 @@
         .ant-steps-item-title {
             font-size: 16px !important;
             font-weight: 600;
-            color: #ff572d !important;
+            color: #01a8ec !important;
         }
 
         .ant-steps-item-description {
@@ -181,7 +184,7 @@
         .ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-tail::after {
             width: 4px !important;
             height: 112% !important;
-            background-color: #fdb3be !important;
+            background-color: #01a8ec !important;
         }
 
         .ant-steps-dot .ant-steps-item-icon .ant-steps-icon-dot::after,
@@ -191,7 +194,7 @@
             left: -6px !important;
             width: 22px !important;
             height: 22px !important;
-            background: #ff572d !important;
+            background: #01a8ec !important;
             content: '';
             border-radius: 66px;
         }
