--- a/src/pages/PortalPage/component/HomePage/index.less
+++ b/src/pages/PortalPage/component/HomePage/index.less
@@ -12,6 +12,8 @@
 
     .core-services {
         padding: 0 10px;
+        // height: 700px;
+        height: auto;
 
         .core-services-row {
             display: flex;
@@ -20,10 +22,11 @@
 
             :global {
                 .ant-col {
-                    width: 290px;
-                    height: 418px;
+                    width: 25%;
+                    // height: 418px;
+                    height: auto;
                     display: flex;
-                    align-items: center;
+                    // align-items: center;
                     justify-content: center;
                 }
             }
@@ -34,9 +37,12 @@
                 align-items: center;
                 gap: 24px;
                 margin: 10px 0;
-                padding: 70px 8px 0 8px;
-                width: 263px;
-                height: 380px;
+                // padding: 70px 8px 0 8px;
+                padding: 70px 20px 0;
+                // width: 263px;
+                // height: 380px;
+                width: 90%;
+                height: auto;
                 box-sizing: border-box;
                 border-width: 1px;
                 border-style: solid;
@@ -48,19 +54,20 @@
                 cursor: pointer;
 
                 img {
-                    width: 68px;
+                    width: 64%;
+                    height: 160px;
                 }
 
                 .first-level-title {
                     font-family: 'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC';
                     font-weight: 650;
                     font-style: normal;
-                    font-size: 32px;
+                    font-size: 24px;
                 }
 
                 .core-services-desc {
                     font-size: 16px;
-                    line-height: 36px;
+                    line-height: 30px;
                     padding-bottom: 70px;
                     position: relative;
 
@@ -90,18 +97,23 @@
                 transition: all 0.5s;
 
                 &:hover {
-                    width: 316px;
-                    height: 456px;
-                    transition: all 0.5s;
                     background-color: #e0eefa;
-
-                    .core-services-btn {
-                        // display: block;
-                        opacity: 1;
-                        transition: all 0.5s;
-                    }
-
+                    transform: translateY(-10px);
                 }
+
+                // &:hover {
+                //     width: 316px;
+                //     height: 456px;
+                //     transition: all 0.5s;
+                //     background-color: #e0eefa;
+
+                //     .core-services-btn {
+                //         // display: block;
+                //         opacity: 1;
+                //         transition: all 0.5s;
+                //     }
+
+                // }
             }
 
         }
@@ -139,6 +151,49 @@
 
             }
 
+
+        }
+
+        .about-gaojet-thought {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            padding: 50px;
+
+            .thought-content {
+
+                font-size: 16px;
+                color: #757575;
+
+                .thought-content-item {
+                    margin-bottom: 10px;
+
+                    .item-title {
+                        margin-left: -20px;
+                        font-size: 18px;
+                        font-weight: 600;
+                        color: #000000;
+                        position: relative;
+                        line-height: 23px;
+                        margin-bottom: 10px;
+                        padding-left: 20px;
+
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            left: 0;
+                            top: 2px;
+                            width: 6px;
+                            height: 20px;
+                            background: #01a8ec;
+                        }
+                    }
+
+                    .item-desc {
+                        line-height: 35px;
+                    }
+                }
+            }
 
         }
 
@@ -188,7 +243,8 @@
                 padding: 0 10px;
 
                 .serviceability-content-title {
-                    color: #ff4f25;
+                    // color: #ff4f25;
+                    color: #01a8ec;
                     font-size: 40px;
                     font-weight: 550;
                     padding-bottom: 30px;
