--- a/src/pages/PortalPage/component/Title/index.less
+++ b/src/pages/PortalPage/component/Title/index.less
@@ -4,6 +4,12 @@
     padding: 20px 0;
     justify-content: center;
 
+    .blue-line {
+        height: 3px;
+        width: 70px;
+        background-color: #01a8ec;
+    }
+
     .title {
         font-size: 36px;
         padding: 0 12px;
