--- a/src/pages/PortalPage/index.less
+++ b/src/pages/PortalPage/index.less
@@ -17,13 +17,9 @@
                 width: 30%;
                 text-align: center;
 
-                .arp-img {
+                img {
                     height: 60px;
-                }
-
-                .gj-img {
-                    height: 40px;
-                    margin-top: 10px;
+                    // padding: 10px;
                 }
             }
 
@@ -91,18 +87,4 @@
         }
     }
 
-}
-
-
-:global {
-    .font-style {
-        line-height: 42px;
-        font-size: 16px;
-    }
-
-    .padding-50 {
-        padding: 0 50px;
-        display: flex;
-        justify-content: space-between;
-    }
 }
