--- a/src/pages/PortalPage/component/Footer/index.less
+++ b/src/pages/PortalPage/component/Footer/index.less
@@ -24,6 +24,7 @@
             .contact-title {
                 font-size: 16px;
                 font-weight: 600;
+                margin-top: -10px;
             }
         }
 
@@ -46,6 +47,7 @@
                 background-color: #ff5025;
                 line-height: 33px;
                 margin-right: 10px;
+                padding-left: 5px;
             }
         }
     }
