--- a/src/pages/PortalPage/component/Footer/index.less
+++ b/src/pages/PortalPage/component/Footer/index.less
@@ -47,7 +47,7 @@
                 background-color: #ff5025;
                 line-height: 33px;
                 margin-right: 10px;
-                padding-left: 5px;
+                // padding-left: 5px;
             }
         }
     }
