--- a/src/pages/PortalPage/index.less
+++ b/src/pages/PortalPage/index.less
@@ -114,7 +114,7 @@
             width: 40px;
             height: 40px;
             cursor: pointer;
-            padding-left: 9px;
+            // padding-left: 9px;
 
             &:hover {
                 background-color: #262626;
