--- a/src/components/TTextBImg/index.less
+++ b/src/components/TTextBImg/index.less
@@ -1,10 +1,13 @@
-.lTextRImg-wrap {
-    .lTextRImg-content {
+.TTextBImg-wrap {
+    .TTextBImg-content {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         width: 100%;
 
-        .lTextRImg-text {
+        padding: 0 50px;
+
+        .TTextBImg-text {
             // padding: 18px 82px !important;
             line-height: 30px;
             font-size: 16px;
