--- a/src/pages/PortalPage/component/Footer/index.less
+++ b/src/pages/PortalPage/component/Footer/index.less
@@ -54,10 +54,11 @@
 
     .company-information {
         font-size: 14px;
-        padding: 20px;
+        padding: 10px;
         display: flex;
         justify-content: center;
-        gap: 30px;
+        // gap: 30px;
+        gap: 5px;
         color: #8590a6;
 
         .filing-number {
