--- a/src/pages/PortalPage/component/HomePage/index.less
+++ b/src/pages/PortalPage/component/HomePage/index.less
@@ -55,7 +55,8 @@
 
                 img {
                     width: 64%;
-                    height: 160px;
+                    // height: 160px;
+                    height: 120px;
                 }
 
                 .first-level-title {
@@ -131,8 +132,8 @@
 
 
             .about-gaojet-text {
-                padding: 18px 82px !important;
-                line-height: 42px;
+                // padding: 18px 82px !important;
+                line-height: 30px;
                 font-size: 16px;
                 position: relative;
 
@@ -190,7 +191,7 @@
                     }
 
                     .item-desc {
-                        line-height: 35px;
+                        line-height: 30px;
                     }
                 }
             }
