--- a/src/pages/PortalPage/component/ProductIntroduction/index.less
+++ b/src/pages/PortalPage/component/ProductIntroduction/index.less
@@ -120,7 +120,7 @@
             display: flex;
             align-items: center;
             justify-content: space-around;
-            padding: 50px;
+            // padding: 50px;
 
             .thought-content {
 
@@ -152,7 +152,7 @@
                     }
 
                     .item-desc {
-                        line-height: 35px;
+                        line-height: 30px;
                     }
                 }
             }
