--- a/src/pages/PortalPage/component/Title/index.less
+++ b/src/pages/PortalPage/component/Title/index.less
@@ -1,8 +1,9 @@
 .content-title {
     display: flex;
     align-items: center;
-    padding: 20px 0;
+    padding: 30px 0;
     justify-content: center;
+    // margin-bottom: -70px;
 
     .blue-line {
         height: 3px;
