再次更新官网

--- a/src/components/LTextTitleRImg/index.less
+++ b/src/components/LTextTitleRImg/index.less
@@ -9,6 +9,8 @@
 
             font-size: 16px;
             color: #757575;
+            padding: 20px;
+            width: 50%;
 
             .thought-content-item {
                 margin-bottom: 10px;
