--- a/src/pages/PortalPage/component/ContactUs/index.less
+++ b/src/pages/PortalPage/component/ContactUs/index.less
@@ -51,8 +51,8 @@
 
             .office-map {
                 position: absolute;
-                top: 60px;
-                right: 80px;
+                bottom: 230px;
+                right: 20px;
 
             }
 
