--- a/src/pages/PortalPage/component/HomePage/index.less
+++ b/src/pages/PortalPage/component/HomePage/index.less
@@ -38,7 +38,7 @@
                 gap: 24px;
                 margin: 10px 0;
                 // padding: 70px 8px 0 8px;
-                padding: 70px 20px 0;
+                padding: 40px 20px 0;
                 // width: 263px;
                 // height: 380px;
                 width: 90%;
@@ -69,7 +69,8 @@
                 .core-services-desc {
                     font-size: 16px;
                     line-height: 30px;
-                    padding-bottom: 70px;
+                    // padding-bottom: 70px;
+                    padding-bottom: 40px;
                     position: relative;
 
                 }
@@ -159,12 +160,14 @@
             display: flex;
             align-items: center;
             justify-content: space-around;
-            padding: 50px;
+            // padding: 50px;
 
             .thought-content {
 
                 font-size: 16px;
                 color: #757575;
+                padding: 20px;
+                width: 50%;
 
                 .thought-content-item {
                     margin-bottom: 10px;
@@ -305,7 +308,8 @@
                     width: 25%;
 
                     img {
-                        width: 100%;
+                        width: 80%;
+                        height: 90px;
                     }
                 }
             }
