--- a/src/components/Card/index.less
+++ b/src/components/Card/index.less
@@ -10,4 +10,12 @@
             }
         }
     }
+
+    @media screen and (max-width: 700px){
+        :global {
+            .ant-card {
+                width: 100%;
+            }
+        }
+    }
 }
