--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -9,7 +9,7 @@
   <meta name="description" content="不语笔记, 龙伟的个人笔记" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>不语</title>
-  <link rel="icon" href="<%= context.config.publicPath +'letter_l.png'%>" type="image/x-icon" />
+  <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=e888fd47d43cae77ccac97c4aa467e4f"></script>
 </head>
 
@@ -205,7 +205,7 @@
           height: 100%;
           min-height: 420px;
         ">
-      <img src="<%= context.config.publicPath +'letter_l.png'%>" alt="logo" width="256" />
+      <img src="<%= context.config.publicPath +'logo_w.png'%>" alt="logo" width="256" />
       <div class="page-loading-warp">
         <div class="ant-spin ant-spin-lg ant-spin-spinning">
           <span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div style="display: flex; align-items: center; justify-content: center">
-        <img src="<%= context.config.publicPath +'letter_l.png'%>" width="32" style="margin-right: 8px" />
+        <img src="<%= context.config.publicPath +'logo_w.png'%>" width="32" style="margin-right: 8px" />
         Lzengp.top
       </div>
     </div>
