--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -205,7 +205,7 @@
           height: 100%;
           min-height: 420px;
         ">
-      <img src="<%= context.config.publicPath +'logo_w.png'%>" alt="logo" width="256" />
+      <img src="<%= context.config.publicPath +'logo_l.png'%>" alt="logo" width="256" />
       <div class="page-loading-warp">
         <div class="ant-spin ant-spin-lg ant-spin-spinning">
           <span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div style="display: flex; align-items: center; justify-content: center">
-        <img src="<%= context.config.publicPath +'logo_w.png'%>" width="32" style="margin-right: 8px" />
+        <img src="<%= context.config.publicPath +'logo_l.png'%>" width="32" style="margin-right: 8px" />
         Lzengp.top
       </div>
     </div>
