底部微书签等信息放到顶部

--- a/src/pages/mypages/myArticle/index.less
+++ b/src/pages/mypages/myArticle/index.less
@@ -7,6 +7,22 @@
   background-color: #ffffff;
   width: 100%;
   border-bottom: 1px solid #f1f3f4;
+
+  .icpNum {
+    position: fixed;
+    right: 12px;
+    top: 1px;
+    width: 100%;
+    height: 50px;
+    // background-color: #fff;
+    border-top: 1px solid #eee;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: flex-end;
+    color: #8590a6;
+    font-size: 12px;
+  }
 }
 
 .myArticleWarp {
