--- a/src/components/Card/index.less
+++ b/src/components/Card/index.less
@@ -1,4 +1,13 @@
 .myCardWrap {
+    
+    .myAvater {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        font-size: 22px;
+        margin-right: 10px;
+    }
+
     :global {
         .ant-card {
             box-shadow: 0.2em 0.2em 0.4em #e1e1e1;
@@ -11,7 +20,7 @@
         }
     }
 
-    @media screen and (max-width: 700px){
+    @media screen and (max-width: 700px) {
         :global {
             .ant-card {
                 width: 100%;
